--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -529,3 +529,13 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-applefritter { background-position: -100% -1900%; }
 .flair-snowdrop { background-position: -200% -1900%; }
 .flair-blossomforth { background-position: -300% -1900%; }
+.flair-bulkbiceps { background-position: 0 -2000%; }
+.flair-discord { background-position: -100% -2000%; }
+.flair-lightningdust { background-position: -200% -2000%; }
+.flair-mspeachbottom { background-position: -300% -2000%; }
+.flair-msharshwhinny { background-position: 0 -2100%; }
+.flair-thunderlane { background-position: -100% -2100%; }
+.flair-flutterbat { background-position: -200% -2100%; }
+.flair-adagiodazzle { background-position: 0 -2200%; }
+.flair-ariablaze { background-position: -100% -2200%; }
+.flair-sonatadusk { background-position: -200% -2200%; }
