--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -66,6 +66,19 @@ font-weight: bold;
     border-bottom: 1px solid #ac1280;
 }
 
+#RESSubredditGroupDropdown {
+background-color:#2c1061!important;
+top:19px!important;
+}
+
+#RESSubredditGroupDropdown :hover {
+background-color: transparent!important;
+}
+
+#RESSubredditGroupDropdown .RESShortcutsEditButtons .res-icon {
+color: whitesmoke!important;
+}
+
 #RESShortcutsEditContainer {
     background-color:transparent!important;
     color:#ac1280!important;
