--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -461,13 +461,13 @@ a[href|="/calamityangry"]{  background-position: -294px -1110px; width: 150px; h
 a[href|="/calamityhandsome"]{  background-position: -294px -1293px; width: 150px; height: 149px; }
 a[href|="/velvetparty"]{  background-position: -294px -1492px; width: 150px; height: 89px; }
 
-a[href|="/batpip"],a[href|="/velvetsocks"],a[href|="/velvetnudge"],a[href|="/velvetfrown"],a[href|="/velvetskip"], a[href|="/lpdatplot"], a[href|="/lpgiddy"], a[href|="/bjpanic"], a[href|="/bjsquee"], a[href|="/bjcool"]
+a[href|="/batpip"],a[href|="/velvetsocks"],a[href|="/velvetnudge"],a[href|="/velvetfrown"],a[href|="/velvetskip"], a[href|="/lpdatplot"], a[href|="/lpgiddy"], a[href|="/bjpanic"], a[href|="/bjsquee"], a[href|="/bjcool"], a[href|="/bjtipsy"], a[href|="/bjcute"], a[href|="/bjheart"], a[href|="/bjcontent"], a[href|="/calamityarmor"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em8-v03%%);
+background-image: url(%%foe-em8-v05%%);
 }
 a[href|="/batpip"]{  background-position: 0 0; width: 123px; height: 150px; }
 a[href|="/velvetsocks"]{  background-position: 0 -200px; width: 150px; height: 121px; }
@@ -479,6 +479,22 @@ a[href|="/lpgiddy"]{   background-position: 0 -1110px; width: 83px; height: 100p
 a[href|="/bjpanic"]{   background-position: 0 -1260px; width: 102px; height: 100px; }
 a[href|="/bjsquee"]{   background-position: 0 -1410px; width: 83px; height: 100px; }
 a[href|="/bjcool"]{   background-position: 0 -1560px; width: 70px; height: 75px; }
+a[href|="/bjtipsy"]{   background-position: 0 -1685px; width: 150px; height: 156px; }
+a[href|="/bjcute"]{   background-position: 0 -1891px; width: 137px; height: 150px; }
+a[href|="/bjheart"]{   background-position: -200px 0; width: 119px; height: 150px;  }
+a[href|="/bjcontent"]{   background-position: -200px -200px; width: 129px; height: 150px; }
+a[href|="/calamityarmor"]{   background-position: -200px -400px; width: 150px; height: 165px; }
+
+a[href|="/deusmachina"], a[href|="/griffonmerc"]
+{
+display: block;
+clear: none;
+float: left;
+background-repeat: no-repeat;
+background-image: url(%%foe-em9-v01%%);
+}
+a[href|="/deusmachina"]{  background-position: 0 0; width: 150px; height: 171px; }
+a[href|="/griffonmerc"]{  background-position: 0 -221px; width: 200px; height: 136px; }
 
 a[href|="/advicebj"]
 {
