--- a/source-css/maudpie.css
+++ b/source-css/maudpie.css
@@ -298,6 +298,21 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 .flair-harshwhinny
 {background-position: 0 -2100%}
 
+.flair-thunderlane
+{background-position: -100% -2100%}
+
+.flair-flutterbat
+{background-position: -200% -2100%}
+
+.flair-adagiodazzle
+{background-position:0% -2200%}
+
+.flair-ariablaze
+{background-position:-100% -2200%}
+
+.flair-sonatadusk
+{background-position:-200% -2200%}
+
 a[href|="/spaceholder"]
 {display:block;clear:none;float:right;width:70px;height:70px;background-image:url(%%emotes%%)!important}
 
