--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1289,6 +1289,7 @@ a[href|="/engtavicheer"] {
 .flair-nightmarity {background-position: -300% -2300%}
 
 .flair-marinesandwich {background-position: 0 -2400%}
+.flair-raindrops {background-position: -100% -2400%}
 
 /*HOVER FLAIRS! Because yay. Follow same formating to make a new one*/
 
@@ -1340,7 +1341,7 @@ a.author[href$="deathdude223"] {font-size:0!important; overflow:hidden; display:
 a.author[href$="deathdude223"]:before {font-size:10px!important; visibility:visible!important; content: "deathdude222"} 
 
 a.author[href$="DoctorBoson"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="DoctorBoson"]:before {font-size:10px!important; visibility:visible!important; content: "[Insert current name here]"} 
+a.author[href$="DoctorBoson"]:before {font-size:10px!important; visibility:visible!important; content: "Doctor Feelgood"} 
 
 a.author[href$="TwoWorldsCoexisting"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="TwoWorldsCoexisting"]:before {font-size:10px!important; visibility:visible!important; content: "TwoDogesCoexisting"}
