--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -290,9 +290,11 @@ body:not(.subscriber) #siteTable:before
 .side .usertext-body h4:nth-last-of-type(7) a {
    top: 280px;
 }
-
+.side .usertext-body h4:nth-last-of-type(8) a {
+   top: 310px;
+}
 .side {
-   padding-top: 210px;
+   padding-top: 240px;
 }
 /*END NEW SUBMIT BUTTONS*/
 /*ANNOUNCEMENTS*/
