--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -133,7 +133,7 @@ Clear: none;
 Float: left;
 Width: 70px;
 Height: 70px;
-background-image: url(%%sbsquint2%%) !important
+background-image: url(%%sbsquint%%) !important
 }
 
 a[href="/hornymare"]{
@@ -153,7 +153,7 @@ Clear: none;
 Float: left;
 Width: 122px;
 Height: 150px;
-background-image: url(%%coloneye2%%) !important
+background-image: url(%%coloneye%%) !important
 }
 
 
