--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -420,8 +420,12 @@ a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
-a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"], a[href|="/fillyderpysit"], a[href|="/suggestia"], a[href|="/rdcringe"], a[href|="/rdcantwait"], a[href|="/ddsad"], a[href|="/goodyear"], a[href|="/mlady"], a[href|="/blushingluna"], a[href|="/scootles"], a[href|="/raritylipbite"]
+a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"], a[href|="/fillyderpysit"], a[href|="/suggestia"], a[href|="/rdcringe"], a[href|="/rdcantwait"], a[href|="/ddsad"], a[href|="/goodyear"], a[href|="/mlady"], a[href|="/blushingluna"], a[href|="/scootles"], a[href|="/raritylipbite"], a[href|="/cheekyjack"]
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
+
+/* 100x100c 'motes */
+a[href|="/sadbot"]
+{background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
 a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[href|="/twihappycry"], a[href|="/properbudget"], a[href|="/celestiaglee"], a[href|="/frittergasp"], a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/whatatwist"], a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/sombrarage"], a[href|="/gildaconfused"], a[href|="/rarityspy"], a[href|="/twilightyay"], a[href|="/tiadisapproval"]
@@ -489,11 +493,15 @@ a[href|="/slowbro"], a[href|="/oddish"], a[href|="/mankey"], a[href|="/applelaug
 {background-image:url(%%misfitsh%%);display:block;float:left;}
 
 /* Misfits i */
-a[href|="/thespittening"]
+a[href|="/thespittening"], a[href|="/goodkingsombra"], a[href|="/derpymouse"], a[href|="/goldenday"], a[href|="/notenoughrocks"]
 {background-image:url(%%misfitsi%%);display:block;float:left;}
 
+/*
+  ------
+ */
+
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
-a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"], a[href|="/poliwag"]
+a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"], a[href|="/poliwag"], a[href|="/sadbot"]
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
@@ -649,7 +657,7 @@ a[href|="/discentiaelated"], a[href|="/raritylipbite"]
 {background-position: -200% -1200%;}
 
 /* Grid pos 0,13 'motes */
-a[href|="/cadshrug"]
+a[href|="/cadshrug"], a[href|="/cheekyjack"]
 {background-position: 0 -1300%;}
 
 /* Grid pos 1,13 'motes */
@@ -1028,3 +1036,7 @@ a[href|="/sbstalksthread"], a[href|="/sbstalkthread"] {width:94px;height:150px;b
 a[href|="/spitfirebellyrubs"] {width:300px;height:148px;background-position: -127px -600px;}
 a[href|="/sombrayes"] {width:153px;height:200px;background-position: -547px -400px;}
 a[href|="/thespittening"] {width:200px;height:156px;}
+a[href|="/goodkingsombra"] {width:146px;height:200px;background-position: 0 -156px;}
+a[href|="/derpymouse"] {width:100px;height:116px;background-position: -146px -156px;}
+a[href|="/goldenday"] {width:114px;height:150px;background-position: -200px 0;}
+a[href|="/notenoughrocks"] {width:170px;height:150px;background-position: -314px 0;}
