--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -156,15 +156,15 @@ a[href|="/orshity"] {
     background-position: -0px -0px
     }
 
-a[href|="/manlytoast"] {
+a[href|="/cockatiel"] {
     display: block;
     clear: none;
     float: left;
-    background-image: url(%%manlytoast%%)
+    background-image: url(%%cockatiel%%)
     }
-a[href|="/manlytoast"] {
-    width: 71px;
-    height: 100px;
+a[href|="/cockatiel"] {
+    width: 192px;
+    height: 183px;
     background-position: -0px -0px
     }
 
