--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -4,7 +4,7 @@
 }
 
 #header-img {
-    margin-top: -10px;
+    margin-top: -1px;
     margin-right: 0px;
 }
 
@@ -72,6 +72,7 @@ div#header-bottom-left ul.tabmenu {
   margin: 0 auto;
   display: block;
   font-size:0;
+  margin-bottom:65px;
 }
 
 .pagename a:hover {
@@ -117,6 +118,7 @@ div#header-bottom-left ul.tabmenu {
    width: 320px;
    line-height: 1.3;
    z-index: 10;
+   margin-top: 45px;
 }
 
 .side h6 {
@@ -598,11 +600,26 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 .flair-harshwhinny
 {background-position: 0 -2100%}
 
+.flair-thunderlane
+{background-position: -100% -2100%}
+
+.flair-flutterbat
+{background-position: -200% -2100%}
+
+.flair-adagiodazzle
+{background-position:0% -2200%}
+
+.flair-ariablaze
+{background-position:-100% -2200%}
+
+.flair-sonatadusk
+{background-position:-200% -2200%}
+
 .flair-100-emblem
-{background-position: 0 -352px;height:42px;width:32px;}
+{background-position: 0 -368px;height:42px;width:32px;}
 
 .flair-100-sunset
-{background-position: -32px -352px;height:42px;width:32px;}
+{background-position: -32px -368px;height:42px;width:32px;}
 
 a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/sneakysunset"],a[href|="/sneakyss"],a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/sunsetstare"],a[href|="/ssstare"],a[href|="/sunsetbored"],a[href|="/ssbored"],a[href|="/sunsetpuppyeyes"],a[href|="/sspuppyeyes"],a[href|="/sunsetderp"],a[href|="/ssderp"],a[href|="/sunsethappy"],a[href|="/sshappy"],a[href|="/sunsetsosorry"],a[href|="/sssosorry"],a[href|="/sleepysunset"],a[href|="/sleepyss"],a[href|="/sunsetohyou"],a[href|="/ssohyou"],a[href|="/sunsetsneer"],a[href|="/sssneer"],a[href|="/sunsetyay"],a[href|="/ssyay"],a[href|="/searchingsunset"],a[href|="/searchingss"],a[href|="/sunsetshiver"],a[href|="/ssshiver"],a[href|="/sunsetshrug"],a[href|="/ssshrug"],a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"],a[href|="/sunsetindeed"],a[href|="/ssindeed"],a[href|="/ifyouknowwhatimean"],a[href|="/sunsetwait"],a[href|="/sswait"],
 a[href|="/rsunsetshocked"],a[href|="/rssshocked"],a[href|="/rsneakysunset"],a[href|="/rsneakyss"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/rsunsetstare"],a[href|="/rssstare"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetpuppyeyes"],a[href|="/rsspuppyeyes"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/rsunsethappy"],a[href|="/rsshappy"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/rsleepysunset"],a[href|="/rsleepyss"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/rsunsetsneer"],a[href|="/rsssneer"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/rsearchingsunset"],a[href|="/rsearchingss"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/rsunsetshrug"],a[href|="/rssshrug"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/rsunsetindeed"],a[href|="/rssindeed"],a[href|="/rifyouknowwhatimean"],a[href|="/rsunsetwait"],a[href|="/rsswait"]
